--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-dom": "^17.0.1",
     "react-elastic-carousel": "^0.11.0",
     "react-scripts": "4.0.1",
+    "react-youtube": "^7.13.1",
     "styled-components": "^5.2.1",
     "web-vitals": "^0.2.4"
   },
