--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-elastic-carousel": "^0.11.0",
+    "react-icons": "^4.1.0",
     "react-scripts": "4.0.1",
     "react-youtube": "^7.13.1",
     "styled-components": "^5.2.1",
